--- a/plot_tab_sourcefiles.Rmd
+++ b/plot_tab_sourcefiles.Rmd
@@ -5,7 +5,7 @@ jupyter:
       extension: .Rmd
       format_name: rmarkdown
       format_version: '1.2'
-      jupytext_version: 1.3.0
+      jupytext_version: 1.6.0
   kernelspec:
     display_name: Python 3
     language: python
@@ -19,9 +19,11 @@ import matplotlib.pyplot as plt
 ```
 
 ```{python}
-oldtabfield = np.loadtxt('/home/james/graspfiles/tabsourcefiles/Horn_Clover12b_150GHzSM_Coherent_NF__with_ORTH_grdfileXPOLONLY.grd', skiprows=8).T
+#oldtabfield = np.loadtxt('/home/james/graspfiles/tabsourcefiles/Horn_Clover12b_150GHzSM_Coherent_NF__with_ORTH_grdfileXPOLONLY.grd', skiprows=8).T
+oldtabfield = np.loadtxt('/media/james/DATA/LaptopFiles/graspfiles/tabsourcefiles/Horn_Clover12b_150GHzSM_Coherent_NF__with_ORTH_grdfileXPOLONLY.grd', skiprows=8).T
 print(oldtabfield.shape)
-davetabfield = np.loadtxt('/home/james/graspfiles/tabsourcefiles/150tabsourcedave.grd', skiprows=8).T
+#davetabfield = np.loadtxt('/home/james/graspfiles/tabsourcefiles/150tabsourcedave.grd', skiprows=8).T
+davetabfield = np.loadtxt('/media/james/DATA/LaptopFiles/graspfiles/tabsourcefiles/150tabsourcedave.grd', skiprows=8).T
 print(davetabfield.shape)
 ```
 
