--- a/simulated_psf_fwhm.Rmd
+++ b/simulated_psf_fwhm.Rmd
@@ -5,7 +5,7 @@ jupyter:
       extension: .Rmd
       format_name: rmarkdown
       format_version: '1.2'
-      jupytext_version: 1.3.0
+      jupytext_version: 1.6.0
   kernelspec:
     display_name: Python 3
     language: python
@@ -30,7 +30,7 @@ psflist = np.array([6, 37, 50, 58, 76, 93])
 
 psfdata = np.zeros([6, 3, 251001])
 for i, tes in enumerate(psflist):
-    data = np.loadtxt('/home/james/TESonsky/psf{}.dat'.format(tes), skiprows=1)
+    data = np.loadtxt('/home/james/TESonSky/psf{}.dat'.format(tes), skiprows=1)
     psfdata[i,:,:] = data.T
 
 plt.figure(figsize=(16,16))
@@ -196,6 +196,7 @@ zi = scipy.ndimage.map_coordinates(np.transpose(psfmesh[tes76,:,:]), np.vstack((
 #azi = np.linspace(X[x0], X[x1], len(zi))
 azi = np.linspace(-1*np.sqrt(X[x0]**2+Y[y0]**2), np.sqrt(X[x1]**2+Y[y1]**2), len(zi))
 print(np.sqrt(X[x0]**2+Y[y0]**2), np.sqrt(X[x1]**2+Y[y1]**2))
+degpt = (max(azi) - min(azi)) / len(zi)
 
 peaks, _ = find_peaks(zi, prominence=0.1)
 results_half = peak_widths(zi, peaks, rel_height=0.5)
@@ -213,8 +214,8 @@ plt.plot(azi[peaks], zi[peaks], "x", mew=5, ms=10,
          label="Peak Sep {:3.2}$^\circ$, {:3.2}$^\circ$".format(azi[peaks][1]-azi[peaks][0], azi[peaks][1]-azi[peaks][2]))
 
 plt.legend(loc='upper left', fontsize=15)
-#plt.xticks(-10,10,step=1)
-
+plt.xticks(np.arange(-18,18,step=1));
+plt.savefig("/home/james/Pictures/sim_meas.png", bbox_inches='tight', dpi=300)
 ```
 
 ```{python}
