--- a/SynthesizedBeam.Rmd
+++ b/SynthesizedBeam.Rmd
@@ -88,12 +88,26 @@ Similarly one can have access to the horn array:
 centers = q.horn.center[:, 0:2]
 col = q.horn.column
 row = q.horn.row
-for i in range(len(centers)):
-    plt.text(centers[i,0]-0.006, centers[i,1], 'c{0:}'.format(col[i]), color='r',fontsize=6)
-    plt.text(centers[i,0]+0.001, centers[i,1], 'r{0:}'.format(row[i]), color='b',fontsize=6)
 
-plt.figure()
+
+plt.figure(figsize=(14,14))
 q.horn.plot()
+
+special = [190, 134, 272]
+
+for i in range(len(centers)):
+    plt.text(centers[i,0]-0.006, centers[i,1], 'c{0:}'.format(col[i]), color='r',fontsize=8)
+    plt.text(centers[i,0]+0.00001, centers[i,1], 'r{0:}'.format(row[i]), color='b',fontsize=8)
+    plt.text(centers[i,0]-0.005, centers[i,1]-0.004, 'h{0:}'.format(str(i+1)), color='g',fontsize=8)
+    
+    if i+1 in special:
+        plt.plot(centers[i,0]-0.0005, centers[i,1]+0.0005, 'D', color='xkcd:burnt orange',  markersize=29, alpha=0.4, mfc = None)
+        #plt.scatter(centers[i,0], centers[i,1], s=800, facecolors='none', edgecolors='r')
+        
+plt.ylabel('Horn Reference Frame Y (m)')
+plt.xlabel('Horn Reference Frame X (m)')
+#plt.savefig("/home/james/OneDrive/Thesisv2/Figures/figsc35/specialhorns.png", bbox_inches='tight', facecolor='white')
+
 ```
 
 ### Closing and opening horns
@@ -110,6 +124,25 @@ hornsFI = instFI.horn.open
 
 hornsTD = (col >= 8) & (col <= 15) & (row >= 8) & (row <= 15)
 # print(hornsTD)
+
+### Now create First Instrument and TD monochromatic
+instTD = qubic.QubicInstrument(d)
+instTD.horn.open[~hornsTD] = False
+
+plt.figure()
+instTD.horn.plot()
+```
+
+```{python}
+### Horns for FI
+d['config'] = 'FI'
+instFI = qubic.QubicInstrument(d)
+hornsFI = instFI.horn.open
+
+
+#hornsTD = (col >= 8) & (col <= 15) & (row >= 8) & (row <= 15)
+# print(hornsTD)
+ahorns =
 
 ### Now create First Instrument and TD monochromatic
 instTD = qubic.QubicInstrument(d)
