--- a/simulated_psf_fwhm.Rmd
+++ b/simulated_psf_fwhm.Rmd
@@ -59,7 +59,7 @@ def makemeshgrid(psfdata, meshsize):
     #plt.show()
     return Z
 
-meshsize = 101
+meshsize = 301
 psfmesh = np.zeros([6, meshsize, meshsize])
 for i, tes in enumerate(psflist):
     psfmesh[i,:,:] = makemeshgrid(psfdata[i], meshsize)
@@ -161,6 +161,15 @@ print("FWHM in deg ", results_half[0] * ((max(azi) - min(azi))/num) ) #= fwhm in
 ```
 
 ```{python}
+print(plt.rcParams["axes.prop_cycle"])
+font = {'family' : 'normal',
+        'weight' : 'normal',
+        'size'   : 20}
+
+plt.rc('font', **font)
+```
+
+```{python}
 """The same but in degress for SPIE plot"""
 tes76 = 5
 
@@ -169,13 +178,15 @@ azmax = max(psfdata[tes76,0,:])
 elmin = min(psfdata[tes76,1,:])
 elmax = max(psfdata[tes76,1,:])
 
-X = np.linspace(azmin, azmax, 101)
-Y = np.linspace(elmax, elmin, 101)
+X = np.linspace(azmin, azmax, 301)
+Y = np.linspace(elmax, elmin, 301)
+
+print("psf data shape, ", psfdata[tes76,1,:].shape, X.shape)
 
 # x0, y0 = 50, 158# These are in _pixel_ coordinates!! in DEGREES
 # x1, y1 = 175, 32
-x0, y0 = 25, 79# These are in _pixel_ coordinates!! in DEGREES
-x1, y1 = 81, 22
+x0, y0 = 75, 235# These are in _pixel_ coordinates!! in DEGREES
+x1, y1 = 250, 62
 
 plt.figure(figsize=(16,12))
 plt.subplot(1,2,1)
@@ -199,23 +210,154 @@ print(np.sqrt(X[x0]**2+Y[y0]**2), np.sqrt(X[x1]**2+Y[y1]**2))
 degpt = (max(azi) - min(azi)) / len(zi)
 
 peaks, _ = find_peaks(zi, prominence=0.1)
-results_half = peak_widths(zi, peaks, rel_height=0.5)
+results_half = peak_widths(zi/max(zi), peaks, rel_height=0.5)
 print(results_half)
 
 degpt = (azmax - azmin)/101
 print(degpt)
 
 plt.figure(figsize=(16,8))
-plt.plot(azi, zi, label="Cut", lw=4)
-plt.plot(azi[peaks], zi[peaks], "x", label="Peaks", mew=5, ms=10)
-plt.plot(azi[peaks], results_half[1], '_', mew=5, ms=10, 
+plt.plot(azi, zi/max(zi), label="150 GHz Cut", lw=4)
+#plt.plot(azi[peaks], zi[peaks]/max(zi[peaks]), "x", color='#1f77b4', label="Peaks", mew=5, ms=10)
+plt.plot(azi[peaks], results_half[1], '_', mew=3, ms=34, color='#1f77b4',
          label="FWHM = {:3.3}$^\circ$".format(results_half[0][1]*degpt))
-plt.plot(azi[peaks], zi[peaks], "x", mew=5, ms=10, 
+plt.plot(azi[peaks], zi[peaks]/max(zi[peaks]), "x", color='#1f77b4', mew=5, ms=10, 
          label="Peak Sep {:3.2}$^\circ$, {:3.2}$^\circ$".format(azi[peaks][1]-azi[peaks][0], azi[peaks][1]-azi[peaks][2]))
 
-plt.legend(loc='upper left', fontsize=15)
+plt.ylabel('Normalised Intensity')
+plt.xlabel(r'Angle $\theta ^\circ$')
+plt.legend(loc='upper right')
 plt.xticks(np.arange(-18,18,step=1));
-plt.savefig("/home/james/Pictures/sim_meas.png", bbox_inches='tight', dpi=300)
+plt.xlim([-12, 12])
+#plt.savefig("/home/james/Pictures/sim_meas.png", bbox_inches='tight', dpi=300)
+```
+
+```{python}
+dirfile = '/home/james/temp/150_76/150GHZ-30072020'
+
+TESNum=76
+
+flatmap150, az, el = sbfit.get_flatmap(TESNum, dirfile, azmin = -20.0885009765625, azmax=20.1983642578125)
+print("flatmap shape", flatmap150.shape)
+AZ, EL = np.meshgrid(az, el)
+AZ = AZ*np.cos(np.deg2rad(50))
+
+plt.figure(figsize=(12,16))
+plt.imshow(flatmap150, aspect='equal', origin='lower',
+          extent=[np.min(AZ), np.max(AZ), np.min(EL), np.max(EL)])
+
+
+plt.figure(figsize=(16,12))
+plt.imshow(flatmap150, aspect='equal')
+# show()
+# pts1, pts2, pts3 = ginput(3)
+# #close()
+# print(pts1, pts2)
+# # #%matplotlib inline
+plt.xticks(np.arange(0, 100, step=2), rotation=-90)
+plt.yticks(np.arange(0, 100, step=2))
+plt.grid(True)
+
+x0, y0 = 26, 96
+x1, y1 = 65, 47
+x2, y2 = 88, 20
+
+
+
+plt.plot([x0, x1], [y0, y1], 'ro-')
+plt.plot([x1, x2], [y1, y2], 'bo-')
+
+#x, y = np.linspace(x0, x1, 40), np.linspace(y0, y1, 40)
+xr = np.linspace(x0, x2, x2-x0)
+#xa, ya = np.linspace(x1, x2, 20), np.linspace(y1, y2, 20)
+yi = np.linspace(y0, y1, x1-x0)
+yj = np.linspace(y1, y2, x2-x1)
+
+#xr = np.append(x, xa)
+yr = np.append(yi, yj)
+
+#make x y mesggrid
+X = np.linspace(min(az)*np.cos(np.deg2rad(50)), max(az)*np.cos(np.deg2rad(50)), 101)
+Y = np.linspace(max(el), min(el), 101)
+
+plt.figure(figsize=(16,16))
+
+plt.imshow(flatmap150, aspect='equal', extent=[min(az)*np.cos(np.deg2rad(50)), max(az)*np.cos(np.deg2rad(50)), min(el), max(el)])
+plt.grid(True)
+plt.plot([X[x0], X[x1]], [Y[y0], Y[y1]], 'ro-')
+plt.plot([X[x1], X[x2]], [Y[y1], Y[y2]], 'bo-')
+plt.xticks(np.arange(int(min(az)), int(max(az)), step=1))
+plt.yticks(np.arange(int(min(el)), int(max(el)), step=1))
+plt.tight_layout()
+
+print(flatmap150.shape, xr.astype(np.int).shape, "test shapes")
+
+plt.figure(figsize=(16,8))
+zi150 = flatmap150[xr.astype(np.int), yr.astype(np.int)]
+zi150 = scipy.ndimage.map_coordinates(np.transpose(flatmap150), np.vstack((xr,yr)))
+#maybe remove degpt azi from here
+#degpt = (X[x2] - X[x0]) /len(zi150)
+#azi = np.linspace(X[x0], X[x2], len(zi))
+azi150 = np.linspace(-1*np.sqrt(X[x0]**2+(Y[y0]-50)**2), np.sqrt(X[x2]**2+(Y[y2]-50)**2), len(zi150))
+degpt150 = (max(azi150) - min(azi150)) / len(zi150)
+
+peaks150, _ = find_peaks(zi150, prominence=0.75e6)
+results_half150 = peak_widths(zi150/max(zi150), peaks150, rel_height=0.5)
+
+plt.plot(azi150, zi150, label="Cut", lw=4)
+plt.plot(azi150[peaks150], zi150[peaks150], "x", label="Peaks",  mew=5, ms=10)
+plt.plot(azi150[peaks150], results_half150[1], '_', mew=5, ms=10, 
+     label="FWHM = {:3.3}$^\circ$".format(results_half150[0][1]*degpt150))
+plt.plot(azi150[peaks150], zi150[peaks150], "x", mew=5, ms=10, 
+     label="Peak Sep {:.2f}$^\circ$, {:.2f}$^\circ$".format(azi150[peaks150][1]-azi150[peaks150][0], azi150[peaks150][1]-azi150[peaks150][2]))
+plt.ylim(0,4e6)
+plt.legend(loc='upper left', fontsize=15)
+```
+
+```{python}
+x0, y0 = 75, 235# These are in _pixel_ coordinates!! in DEGREES
+x1, y1 = 250, 62
+azmin = min(psfdata[tes76,0,:])
+azmax = max(psfdata[tes76,0,:])
+elmin = min(psfdata[tes76,1,:])
+elmax = max(psfdata[tes76,1,:])
+X = np.linspace(azmin, azmax, 301)
+Y = np.linspace(elmax, elmin, 301)
+
+plt.figure(figsize=(17,14))
+plt.imshow(psfmesh[tes76,:,:], aspect='equal', extent=[azmin, azmax, elmin, elmax])
+plt.plot([X[x0], X[x1]], [Y[y0], Y[y1]], 'ro-')
+plt.xlim([-12,12])
+plt.ylim([-12,12])
+plt.xlabel("Azimuth$^\circ$")
+plt.ylabel("Elevation$^\circ$")
+plt.colorbar(label='Normalised Intensity (W)')
+#plt.savefig("/home/james/OneDrive/Thesisv2/Figures/figsc6/simcut.png", bbox_inches='tight', dpi=300)
+
+plt.figure(figsize=(16,8))
+
+plt.plot(azi150, zi150/max(zi150), color='xkcd:pale orange', label="150 GHz Measured Cut", lw=4)
+#plt.plot(azi150[peaks150], zi150[peaks150], "x", label="Peaks",  mew=5, ms=10)
+plt.plot(azi150[peaks150], results_half150[1], '_', color='xkcd:pale orange', mew=3, ms=34, 
+     label="FWHM = {:3.3}$^\circ$".format(results_half150[0][1]*degpt150))
+plt.plot(azi150[peaks150], zi150[peaks150]/max(zi150[peaks150]), "x", color='xkcd:pale orange', mew=5, ms=10, 
+     label="Peak Sep {:.2f}$^\circ$, {:.2f}$^\circ$".format(azi150[peaks150][1]-azi150[peaks150][0], azi150[peaks150][1]-azi150[peaks150][2]))
+
+
+plt.plot(azi+1.8, zi/max(zi), color='xkcd:medium green', label="150 GHz Simulated Cut", lw=4)
+#plt.plot(azi[peaks], zi[peaks]/max(zi[peaks]), "x", color='#1f77b4', label="Peaks", mew=5, ms=10)
+plt.plot(azi[peaks]+1.8, results_half[1], '_', mew=3, ms=34, color='xkcd:medium green',
+         label="FWHM = {:3.3}$^\circ$".format(results_half[0][1]*degpt))
+plt.plot(azi[peaks]+1.8, zi[peaks]/max(zi[peaks]), "x", color='xkcd:medium green', mew=5, ms=10, 
+         label="Peak Sep {:3.2}$^\circ$, {:3.2}$^\circ$".format(azi[peaks][1]-azi[peaks][0], azi[peaks][1]-azi[peaks][2]))
+
+
+plt.ylabel('Normalised Intensity')
+plt.xlabel(r'Angle $\theta ^\circ$')
+plt.legend(loc='upper left')
+plt.xticks(np.arange(-18,18,step=1));
+plt.xlim([-12, 12])
+#plt.savefig("/home/james/OneDrive/Thesisv2/Figures/figsc6/simandmeasuredcut.png", bbox_inches='tight', dpi=300)
 ```
 
 ```{python}
